@@ -1,3 +1,9 @@
+2003-09-12  Jeff Johnston  <jjohnstn@redhat.com>
+
+        * top.c (quit_target): New static helper function.
+        (quit_force): Moved code to quit_target().  Call quit_target()
+        via catch_errors() to catch errors during quit.
+
 2003-09-11  Daniel Jacobowitz  <drow@mvista.com>
 
 	* dwarf2loc.c (dwarf2_loc_desc_needs_frame): Variables in a
